tests/errors/zone-promote-source-type.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::promote<i64>(ref mut zone, 5);
  zone::destroy(zone);
  return *item;
}
